--- a/teste/novologin.html
+++ b/teste/novologin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novo Login</title>
-    <link rel="stylesheet" href="src/script/style.css">
+    <link rel="stylesheet" href="novostyle.css">
     <link rel="shortcut icon" href="src/favicon/android-chrome-512x512.png" type="image/x-icon">
 </head>
 <body>
