--- a/cadastro.html
+++ b/cadastro.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="Favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="src/script/style.css">
+    <link rel="shortcut icon" href="src/favicon/android-chrome-512x512.png" type="image/x-icon">
 </head>
 <body>
     <h1>Crie sua conta!</h1>
@@ -22,6 +22,6 @@
     </div>
 
     <!--JAVASCRIPT-->
-    <script src="javascript.js" type="text/javascript"></script>
+    <script src="src/script/javascript.js" type="text/javascript"></script>
 </body>
 </html>
