--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Novo Login</title>
+    <title>Login</title>
     <link rel="stylesheet" href="src/script/style.css">
     <link rel="shortcut icon" href="src/favicon/android-chrome-512x512.png" type="image/x-icon">
 </head>
@@ -20,7 +20,7 @@
             <a href="#">Colares</a>
 
             <button class="btnconta">Minha Conta</button>
-            <button class="btnlogin">Login</button>
+            <button class="btnlogin" onclick="redirecLogin()">Login</button>
         </nav>
     </header>
 
