--- a/login.html
+++ b/login.html
@@ -17,18 +17,26 @@
 
         <nav>
             <!--Menu Mobile-->
-            <div class="alterna-menu" id="menu-mobile">
-                <span>
-                    <ion-icon name="menu" class="iconmenu"></ion-icon>
-                </span>
-            </div>
+            <span class="alterna-menu" id="menu-mobile">
+                <ion-icon name="menu" class="iconmenu"></ion-icon>
+            </span>
 
-            <a href="#">Alianças</a>
-            <a href="#">Brincos</a>
-            <a href="#">Colares</a>
+            <span id="menu-pc">
+                <a href="#">Alianças</a>
+                <a href="#">Brincos</a>
+                <a href="#">Colares</a>
+            </span>
 
-            <button class="btnconta">Minha Conta</button>
-            <button class="btnlogin" onclick="redirecLogin()">Login</button>
+            <!--Menu Mobile-->
+            <span class="alterna-botoes">
+                <ion-icon name="person-circle" class="iconconta"></ion-icon>
+                <ion-icon name="log-in" class="iconlogin"></ion-icon>
+            </span>
+
+            <span id="botoes-pc">
+                <button class="btnconta">Minha Conta</button>
+                <button class="btnlogin" onclick="redirecLogin()">Login</button>
+            </span>
         </nav>
     </header>
 
