⚙️Mudança class caixalogin => caixa

--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
     </header>
 
     <!--LOGIN-->
-    <div class="caixalogin">
+    <div class="caixa">
         <div class="form-box">
             <h1>Iniciar Sessão</h1>
             <!--CADASTRO-->
