--- a/login.html
+++ b/login.html
@@ -21,6 +21,7 @@
                 <ion-icon name="menu" class="iconmenu"></ion-icon>
             </span>
 
+            <!--Menu PC-->
             <span id="menu-pc">
                 <a href="#">Alianças</a>
                 <a href="#">Brincos</a>
@@ -33,6 +34,7 @@
                 <ion-icon name="log-in" class="iconlogin"></ion-icon>
             </span>
 
+            <!--Menu PC-->
             <span id="botoes-pc">
                 <button class="btnconta">Minha Conta</button>
                 <button class="btnlogin" onclick="redirecLogin()">Login</button>
@@ -41,10 +43,9 @@
     </header>
 
     <!--LOGIN-->
-    <div class="caixa">
+    <div id="caixa" class="login">
         <div class="form-box">
-            <h1>Iniciar Sessão</h1>
-            <!--CADASTRO-->
+            <h1>&#x1F44B Iniciar Sessão</h1>
             <form action="#">
                 <!--Email-->
                 <div class="input-box">
@@ -67,9 +68,9 @@
                     <a href="#">Esqueceu a Senha?</a>
                 </div>
                 <!--Iniciar Sessão-->
-                <button type="submit" class="btn-iniciar">INICIAR SESSÃO</button>
-                <div class="semconta">
-                    <p>Não tem uma conta? <a href="cadastro.html" class="register">Cadastre-se</a></p>
+                <button type="submit" class="btn-form">INICIAR SESSÃO</button>
+                <div class="cad-login">
+                    <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se</a></p>
                 </div>
             </form>
         </div>
