✨Ícones do menu brancos

--- a/cadastro.html
+++ b/cadastro.html
@@ -18,7 +18,7 @@
         <nav>
             <!--Menu Mobile-->
             <span class="alterna-menu" id="menu-mobile">
-                <ion-icon name="menu" class="iconmenu"></ion-icon>
+                <ion-icon name="menu" class="iconmenu" color="light"></ion-icon>
             </span>
 
             <span id="menu-pc">
@@ -29,8 +29,8 @@
 
             <!--Menu Mobile-->
             <span class="alterna-botoes">
-                <ion-icon name="person-circle" class="iconconta" onclick="redirecMinhaConta()"></ion-icon>
-                <ion-icon name="log-in" class="iconlogin" onclick="redirecLogin()"></ion-icon>
+                <ion-icon name="person-circle" class="iconconta" onclick="redirecMinhaConta()" color="light"></ion-icon>
+                <ion-icon name="log-in" class="iconlogin" onclick="redirecLogin()" color="light"></ion-icon>
             </span>
 
             <span id="botoes-pc">
