--- a/cadastro.html
+++ b/cadastro.html
@@ -12,7 +12,7 @@
     <!--MENU-->
     <header>
         <span>  
-            <a href="index.html"><img src="src/img/Bella Logo com Fundo.png" alt="Logo" width="70vh"></a>
+            <a href="index.html"><img src="src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
         </span>
 
         <nav>
@@ -29,8 +29,8 @@
 
             <!--Menu Mobile-->
             <span class="alterna-botoes">
-                <ion-icon name="person-circle" class="iconconta" onclick="redirecMinhaConta()" color="light"></ion-icon>
-                <ion-icon name="log-in" class="iconlogin" onclick="redirecLogin()" color="light"></ion-icon>
+                <ion-icon name="person-circle" class="iconconta" color="light" onclick="redirecMinhaConta()"></ion-icon>
+                <ion-icon name="log-in" class="iconlogin" color="light" onclick="redirecLogin()"></ion-icon>
             </span>
 
             <span id="botoes-pc">
