--- a/login.html
+++ b/login.html
@@ -11,8 +11,8 @@
 <body>
     <!--MENU-->
     <header>
-        <span class="logo">
-            <a href="index.html"><img src="src/img/Bella Logo com Fundo.png" alt="Logo" width="70vh"></a>
+        <span>
+            <a href="index.html"><img src="src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
         </span>
 
         <nav>
