--- a/cadastro.html
+++ b/cadastro.html
@@ -91,6 +91,7 @@
                     <label for="senha">Senha</label>
                 </div>
 
+                <!--Confirmar Senha-->
                 <div class="input-box">
                     <span class="icon-relevarsenha" onclick="Mostrar_ConfirmarSenha()">
                         <ion-icon name="eye-off-outline" id="iconconfirmarsenha" onclick="Mudar_IconConfirmarSenha()"></ion-icon>
