--- a/cadastro.html
+++ b/cadastro.html
@@ -45,7 +45,7 @@
     <div id="caixa" class="cadastro">
         <div class="form-box">
             <h1>&#x1F48E Crie sua conta!</h1>
-            <form action="#">
+            <form action="#" id="form-cad">
                 <!--Nome-->
                 <div class="input-box">
                     <span class="icon">
