--- a/teste.html
+++ b/teste.html
@@ -25,25 +25,26 @@
             <span id="menu-pc">
                 <a href="#">Alianças</a>
                 <a href="#">Brincos</a>
-                <a href="#">Colares</a>
+                <a href="#" style="margin-right: 50px;">Colares</a>
             </span>
 
             <!--Menu Mobile-->
             <span class="alterna-botoes">
-                <ion-icon name="person-circle" class="iconconta" onclick="redirecMinhaConta()" color="light"></ion-icon>
-                <ion-icon name="log-in" class="iconlogin" onclick="redirecLogin()" color="light"></ion-icon>
+                <ion-icon name="person-circle-outline" class="iconconta" onclick="redirecMinhaConta()" color="light"></ion-icon>
+                <ion-icon name="chatbubbles-outline" class="iconsuporte" color="light"></ion-icon>
+                <ion-icon name="cart-outline" class="iconcarrinho" color="light"></ion-icon>
             </span>
 
             <!--Menu PC-->
             <span id="botoes-pc">
                 <button class="btnmenu">
-                    <ion-icon name="person-outline" class="iconbtn"></ion-icon><br>Minha Conta
+                    <ion-icon name="person-outline" class="iconbtn"></ion-icon><br>Conta
                 </button>
                 <button class="btnmenu">
                     <ion-icon name="chatbubbles-outline" class="iconbtn"></ion-icon><br>Suporte
                 </button>
                 <button class="btnmenu">
-                    <ion-icon name="cart-outline" class="iconbtn"></ion-icon><br>Meu Carrinho
+                    <ion-icon name="cart-outline" class="iconbtn"></ion-icon><br>Carrinho
                 </button>
             </span>
         </nav>
