--- a/teste.html
+++ b/teste.html
@@ -49,7 +49,12 @@
             </span>
         </nav>
     </header>
-
+    <span class="menu-pc-mobile">
+        <a href="#">Alianças</a>
+        <a href="#">Brincos</a>
+        <a href="#">Colares</a>
+    </span>
+    
     <!--LOGIN-->
     <div id="caixa" class="login">
         <div class="form-box">
