✨ Lista menu nos botões pc

--- a/teste.html
+++ b/teste.html
@@ -23,9 +23,9 @@
 
             <!--Menu PC-->
             <span id="menu-pc">
-                <a href="#">Alianças</a>
-                <a href="#">Brincos</a>
-                <a href="#" style="margin-right: 50px;">Colares</a>
+                <a href="#" class="link-menupc">Alianças</a>
+                <a href="#" class="link-menupc">Brincos</a>
+                <a href="#" class="link-menupc" style="margin-right: 50px;">Colares</a>
             </span>
 
             <!--Menu Mobile-->
@@ -37,14 +37,32 @@
 
             <!--Menu PC-->
             <span id="botoes-pc">
+                <!-- Conta -->
                 <button class="btnmenu">
                     <ion-icon name="person-outline" class="iconbtn"></ion-icon><br>Conta
+                    <div class="listamenu btnconta">
+                        <a href="#" class="link-listamenu">Criar Conta</a>
+                        <a href="#" class="link-listamenu">Iniciar Sessão</a>
+                    </div>
                 </button>
+
+                <!-- Suporte -->
                 <button class="btnmenu">
                     <ion-icon name="chatbubbles-outline" class="iconbtn"></ion-icon><br>Suporte
+                    <div class="listamenu btnsuporte">
+                        <a href="#" class="link-listamenu">Contato</a>
+                        <a href="#" class="link-listamenu">FAQ</a>
+                    </div>
                 </button>
+
+                <!-- Carrinho -->
                 <button class="btnmenu">
                     <ion-icon name="cart-outline" class="iconbtn"></ion-icon><br>Carrinho
+                    <div class="listamenu btncarrinho">
+                        <a href="#" class="link-listamenu">Ver Carrinho</a>
+                        <a href="#" class="link-listamenu">Checkout</a>
+                        <a href="#" class="link-listamenu">Histórico</a>
+                    </div>
                 </button>
             </span>
         </nav>
