--- a/teste.html
+++ b/teste.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="src/script/css/style.css">
     <link rel="stylesheet" href="src/script/css/responsivo.css">
     <link rel="shortcut icon" href="src/favicon/android-chrome-512x512.png" type="image/x-icon">
@@ -30,15 +30,39 @@
 
             <!--Menu Mobile-->
             <span class="alterna-botoes">
-                <ion-icon name="person-circle-outline" class="iconconta" onclick="redirecMinhaConta()" color="light"></ion-icon>
-                <ion-icon name="chatbubbles-outline" class="iconsuporte" color="light"></ion-icon>
-                <ion-icon name="cart-outline" class="iconcarrinho" color="light"></ion-icon>
+                <!-- Conta -->
+                <button class="btnmenu-mobile">
+                    <ion-icon name="person-circle-outline" class="iconconta" color="light"></ion-icon>
+                    <div class="listamenu">
+                        <a href="#" class="link-listamenu">Iniciar Sessão</a>
+                        <a href="#" class="link-listamenu">Criar Conta</a>
+                    </div>
+                </button>
+
+                <!-- Suporte -->
+                <button class="btnmenu-mobile">
+                    <ion-icon name="chatbubbles-outline" class="iconsuporte" color="light"></ion-icon>
+                    <div class="listamenu">
+                        <a href="#" class="link-listamenu">Contato</a>
+                        <a href="#" class="link-listamenu">FAQ</a>
+                    </div>
+                </button>
+
+                <!-- Carrinho -->
+                <button class="btnmenu-mobile">
+                    <ion-icon name="cart-outline" class="iconcarrinho" color="light"></ion-icon>
+                    <div class="listamenu">
+                        <a href="#" class="link-listamenu">Ver Carrinho</a>
+                        <a href="#" class="link-listamenu">Checkout</a>
+                        <a href="#" class="link-listamenu">Histórico</a>
+                    </div>
+                </button>
             </span>
 
             <!--Menu PC-->
             <span id="botoes-pc">
                 <!-- Conta -->
-                <button class="btnmenu">
+                <button class="btnmenu-pc">
                     <ion-icon name="person-outline" class="iconbtn"></ion-icon><br>Conta
                     <div class="listamenu btnconta">
                         <a href="#" class="link-listamenu">Iniciar Sessão</a>
@@ -47,7 +71,7 @@
                 </button>
 
                 <!-- Suporte -->
-                <button class="btnmenu">
+                <button class="btnmenu-pc">
                     <ion-icon name="chatbubbles-outline" class="iconbtn"></ion-icon><br>Suporte
                     <div class="listamenu btnsuporte">
                         <a href="#" class="link-listamenu">Contato</a>
@@ -56,7 +80,7 @@
                 </button>
 
                 <!-- Carrinho -->
-                <button class="btnmenu">
+                <button class="btnmenu-pc">
                     <ion-icon name="cart-outline" class="iconbtn"></ion-icon><br>Carrinho
                     <div class="listamenu btncarrinho">
                         <a href="#" class="link-listamenu">Ver Carrinho</a>
@@ -72,12 +96,22 @@
         <a href="#">Brincos</a>
         <a href="#">Colares</a>
     </span>
-    
-    <!--LOGIN-->
-    <div id="caixa" class="login">
+
+    <!--CADASTRO-->
+    <!--Nome, email, cpf, telefone e senha-->
+    <div id="caixa" class="cadastro">
         <div class="form-box">
-            <h1>&#x1F44B Iniciar Sessão</h1>
-            <form action="#">
+            <h1>&#x1F48E Crie sua conta!</h1>
+            <form action="#" id="form-cad">
+                <!--Nome-->
+                <div class="input-box">
+                    <span class="icon">
+                        <ion-icon name="person-outline"></ion-icon>
+                    </span>
+                    <input type="text" name="nome" id="nome" required>
+                    <label for="nome">Nome</label>
+                </div>
+
                 <!--Email-->
                 <div class="input-box">
                     <span class="icon">
@@ -86,6 +120,25 @@
                     <input type="email" name="email" id="email" required>
                     <label for="email">Email</label>
                 </div>
+
+                <!--CPF-->
+                <div class="input-box">
+                    <span class="icon">
+                        <ion-icon name="terminal-outline"></ion-icon>
+                    </span>
+                    <input type="text" name="cpf" id="cpf" class="cpf" maxlength="14" required>
+                    <label for="cpf">CPF</label>
+                </div>
+
+                <!--Telefone-->
+                <div class="input-box">
+                    <span class="icon">
+                        <ion-icon name="call-outline"></ion-icon>
+                    </span>
+                    <input type="text" name="tel" id="tel" class="tel" maxlength="14" required>
+                    <label for="tel">Telefone</label>
+                </div>
+
                 <!--Senha-->
                 <div class="input-box">
                     <span class="icon-relevarsenha" onclick="Mostrar_Senha()">
@@ -94,21 +147,27 @@
                     <input type="password" name="senha" id="senha" required>
                     <label for="senha">Senha</label>
                 </div>
-                <!--Esqueceu a Senha-->
-                <div class="remember-forgot">
-                    <a href="#">Esqueceu a Senha?</a>
+
+                <!--Confirmar Senha-->
+                <div class="input-box">
+                    <span class="icon-relevarsenha" onclick="Mostrar_ConfirmarSenha()">
+                        <ion-icon name="eye-off-outline" id="iconconfirmarsenha" onclick="Mudar_IconConfirmarSenha()"></ion-icon>
+                    </span>
+                    <input type="password" name="confirmarsenha" id="confirmarsenha" required>
+                    <label for="confirmarsenha">Confirmar Senha</label>
                 </div>
-                <!--Iniciar Sessão-->
-                <button type="submit" class="btn-form">INICIAR SESSÃO</button>
+
+                <!--Cadastrar-->
+                <button type="submit" class="btn-form">CADASTRAR</button>
                 <div class="cad-login">
-                    <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se</a></p>
+                    <p>Já possui uma conta? <a href="login.html">Entre aqui!</a></p>
                 </div>
             </form>
         </div>
     </div>
 
     <!--JAVASCRIPT-->
-    <script src="src/script/javascript/diversos.js" type="text/javascript"></script>
+    <script src="src/script/javascript/javascript.js" type="text/javascript"></script>
         <!--Ícones-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
