--- a/faq.html
+++ b/faq.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <title>Nosso FAQ</title>
     <link rel="stylesheet" href="src/script/css/style.css">
     <link rel="stylesheet" href="src/script/css/responsivo.css">
     <link rel="shortcut icon" href="src/favicon/android-chrome-512x512.png" type="image/x-icon">
 </head>
 <body>
-    <!--MENU-->
+    <!-- MENU -->
     <header>
         <span>
             <a href="index.html"><img src="src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
@@ -97,79 +97,49 @@
         <a href="#">Colares</a>
     </span>
 
-    <!--CADASTRO-->
-    <!--Nome, email, cpf, telefone e senha-->
-    <div id="caixa" class="cadastro">
-        <div class="form-box">
-            <h1>&#x1F48E Crie sua conta!</h1>
-            <form action="#" id="form-cad">
-                <!--Nome-->
-                <div class="input-box">
-                    <span class="icon">
-                        <ion-icon name="person-outline"></ion-icon>
-                    </span>
-                    <input type="text" name="nome" id="nome" required>
-                    <label for="nome">Nome</label>
-                </div>
+    <!-- RODAPÉ -->
+     <footer id="rodape">
+        <!-- Categorias -->
+        <span>
+            <h1>Categorias</h1>
+            <ul>
+                <li><a href="#">Alianças</a></li>
+                <li><a href="#">Brincos</a></li>
+                <li class="ultimo"><a href="#">Colares</a></li>
+            </ul>
+        </span>
 
-                <!--Email-->
-                <div class="input-box">
-                    <span class="icon">
-                        <ion-icon name="mail-outline"></ion-icon>
-                    </span>
-                    <input type="email" name="email" id="email" required>
-                    <label for="email">Email</label>
-                </div>
+        <!-- Minha Conta -->
+        <span>
+            <h1>Conta</h1>
+            <ul>
+                <li><a href="login.html">Iniciar Sessão</a></li>
+                <li class="ultimo"><a href="cadastro.html">Criar Conta</a></li>
+            </ul>
+        </span>
 
-                <!--CPF-->
-                <div class="input-box">
-                    <span class="icon">
-                        <ion-icon name="terminal-outline"></ion-icon>
-                    </span>
-                    <input type="text" name="cpf" id="cpf" class="cpf" maxlength="14" required>
-                    <label for="cpf">CPF</label>
-                </div>
+        <!-- Contato -->
+        <span>
+            <h1>Entre em Contato</h1>
+            <ul>
+                <li><a href="#">Número de Telefone</a></li>
+                <li class="ultimo"><a href="#">E-mail</a></li>
+            </ul>
+        </span>
 
-                <!--Telefone-->
-                <div class="input-box">
-                    <span class="icon">
-                        <ion-icon name="call-outline"></ion-icon>
-                    </span>
-                    <input type="text" name="tel" id="tel" class="tel" maxlength="14" required>
-                    <label for="tel">Telefone</label>
-                </div>
-
-                <!--Senha-->
-                <div class="input-box">
-                    <span class="icon-relevarsenha" onclick="Mostrar_Senha()">
-                        <ion-icon name="eye-off-outline" id="iconsenha" onclick="Mudar_IconSenha()"></ion-icon>
-                    </span>
-                    <input type="password" name="senha" id="senha" required>
-                    <label for="senha">Senha</label>
-                </div>
-
-                <!--Confirmar Senha-->
-                <div class="input-box">
-                    <span class="icon-relevarsenha" onclick="Mostrar_ConfirmarSenha()">
-                        <ion-icon name="eye-off-outline" id="iconconfirmarsenha" onclick="Mudar_IconConfirmarSenha()"></ion-icon>
-                    </span>
-                    <input type="password" name="confirmarsenha" id="confirmarsenha" required>
-                    <label for="confirmarsenha">Confirmar Senha</label>
-                </div>
-
-                <!--Cadastrar-->
-                <button type="submit" class="btn-form">CADASTRAR</button>
-                <div class="cad-login">
-                    <p>Já possui uma conta? <a href="login.html">Entre aqui!</a></p>
-                </div>
-            </form>
-        </div>
-    </div>
+        <!-- Brands -->
+        <span>
+            <a href="https://github.com/Ayanami016/TCC" target="_blank"><i class="fab fa-github fa-lg"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+        </span>
+     </footer>
 
     <!--JAVASCRIPT-->
     <script src="src/script/javascript/javascript.js" type="text/javascript"></script>
         <!--Ícones-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+        <!-- Font Awesome - usado para o rodapé -->
+    <script src="https://kit.fontawesome.com/750ae9b6a4.js" crossorigin="anonymous"></script>
 </body>
 </html>
