--- a/teste.html
+++ b/teste.html
@@ -34,8 +34,8 @@
                 <button class="btnmenu-mobile">
                     <ion-icon name="person-circle-outline" class="iconconta" color="light"></ion-icon>
                     <div class="listamenu">
-                        <a href="#" class="link-listamenu">Iniciar Sessão</a>
-                        <a href="#" class="link-listamenu">Criar Conta</a>
+                        <a href="login.html" class="link-listamenu">Iniciar Sessão</a>
+                        <a href="cadastro.html" class="link-listamenu">Criar Conta</a>
                     </div>
                 </button>
 
@@ -44,7 +44,7 @@
                     <ion-icon name="chatbubbles-outline" class="iconsuporte" color="light"></ion-icon>
                     <div class="listamenu">
                         <a href="#" class="link-listamenu">Contato</a>
-                        <a href="#" class="link-listamenu">FAQ</a>
+                        <a href="faq.html" class="link-listamenu">FAQ</a>
                     </div>
                 </button>
 
