🔍Barra de Pesquisa

--- a/paginas/teste.html
+++ b/paginas/teste.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
-    <link rel="stylesheet" href="src/script/css/style.css">
-    <link rel="stylesheet" href="src/script/css/responsivo.css">
-    <link rel="shortcut icon" href="src/favicon/android-chrome-512x512.png" type="image/x-icon">
+    <title>Teste</title>
+    <link rel="stylesheet" href="../src/script/css/style.css">
+    <link rel="stylesheet" href="../src/script/css/responsivo.css">
+    <link rel="shortcut icon" href="../src/favicon/android-chrome-512x512.png" type="image/x-icon">
 </head>
 <body>
     <!--MENU-->
     <header>
         <span>
-            <a href="index.html"><img src="src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
+            <a href="../index.html"><img src="../src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
         </span>
+
+        <input type="search" name="pesquisa" id="pesquisa" class="menu-pesquisa" placeholder="Busca">
 
         <nav>
             <!--Menu Mobile-->
@@ -23,9 +25,9 @@
 
             <!--Menu PC-->
             <span id="menu-pc">
-                <a href="#" class="link-menupc">Alianças</a>
+                <a href="#" class="link-menupc">Anéis</a>
                 <a href="#" class="link-menupc">Brincos</a>
-                <a href="#" class="link-menupc" style="margin-right: 50px;">Colares</a>
+                <a href="#" class="link-menupc" style="margin-right: 10px;">Colares</a>
             </span>
 
             <!--Menu Mobile-->
@@ -101,7 +103,7 @@
     <!--Nome, email, cpf, telefone e senha-->
     <div id="caixa" class="cadastro">
         <div class="form-box">
-            <h1>&#x1F48E Crie sua conta!</h1>
+            <h1>&#x1F48E Teste!</h1>
             <form action="#" id="form-cad">
                 <!--Nome-->
                 <div class="input-box">
@@ -167,7 +169,7 @@
     </div>
 
     <!--JAVASCRIPT-->
-    <script src="src/script/javascript/javascript.js" type="text/javascript"></script>
+    <script src="../src/script/javascript/javascript.js" type="text/javascript"></script>
         <!--Ícones-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
