--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>&#x2692 Em manutenção</h1>
     <p>Mas você pode visualizar nossas outras páginas :)</p>
-    <a href="cadastro.html">Cadastro</a> <br>
-    <a href="login.html">Login</a>
+    <a href="./paginas/cadastro.html">Cadastro</a> <br>
+    <a href="./paginas/login.html">Login</a>
 </body>
 </html>
