--- a/paginas/cadastro.html
+++ b/paginas/cadastro.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="src/script/css/style.css">
-    <link rel="stylesheet" href="src/script/css/responsivo.css">
-    <link rel="shortcut icon" href="src/favicon/android-chrome-512x512.png" type="image/x-icon">
+    <link rel="stylesheet" href="../src/script/css/style.css">
+    <link rel="stylesheet" href="../src/script/css/responsivo.css">
+    <link rel="shortcut icon" href="../src/favicon/android-chrome-512x512.png" type="image/x-icon">
 </head>
 <body>
     <!--MENU-->
     <header>
         <span>
-            <a href="index.html"><img src="src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
+            <a href="../index.html"><img src="../src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
         </span>
 
         <nav>
@@ -167,7 +167,7 @@
     </div>
 
     <!--JAVASCRIPT-->
-    <script src="src/script/javascript/javascript.js" type="text/javascript"></script>
+    <script src="../src/script/javascript/javascript.js" type="text/javascript"></script>
         <!--Ícones-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
