--- a/paginas/teste.html
+++ b/paginas/teste.html
@@ -15,7 +15,7 @@
             <a href="../index.html"><img src="../src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
         </span>
 
-        <input type="search" name="pesquisa" id="pesquisa" class="menu-pesquisa" placeholder="Busca">
+        <input type="search" name="pesquisa" id="pesquisa" class="menu-pesquisa" placeholder="Buscar">
 
         <nav>
             <!--Menu Mobile-->
