--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>&#x2692 Em manutenção</h1>
     <p>Mas você pode visualizar nossas outras páginas :)</p>
     <a href="./paginas/cadastro.html">Cadastro</a> <br>
-    <a href="./paginas/login.html">Login</a>
+    <a href="./paginas/login.html">Login</a> <br>
+
+    <a href="./paginas/teste.html">&#x1F575 Segredo</a>
 </body>
 </html>
