✅Barra de Pesquisa Mobile

--- a/paginas/teste.html
+++ b/paginas/teste.html
@@ -93,6 +93,10 @@
             </span>
         </nav>
     </header>
+
+    <span class="menu-pesquisa-mobile">
+        <input type="search" name="pesquisa" id="pesquisa" placeholder="Buscar">
+    </span>
     <span class="menu-pc-mobile">
         <a href="#">Alianças</a>
         <a href="#">Brincos</a>
