✨Barra de Pesquisa Mobile inserida

--- a/paginas/cadastro.html
+++ b/paginas/cadastro.html
@@ -15,6 +15,8 @@
             <a href="../index.html"><img src="../src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
         </span>
 
+        <input type="search" name="pesquisa" id="pesquisa" class="menu-pesquisa" placeholder="Buscar">
+
         <nav>
             <!--Menu Mobile-->
             <span class="alterna-menu" id="menu-mobile">
@@ -23,9 +25,9 @@
 
             <!--Menu PC-->
             <span id="menu-pc">
-                <a href="#" class="link-menupc">Alianças</a>
+                <a href="#" class="link-menupc">Anéis</a>
                 <a href="#" class="link-menupc">Brincos</a>
-                <a href="#" class="link-menupc" style="margin-right: 50px;">Colares</a>
+                <a href="#" class="link-menupc" style="margin-right: 10px;">Colares</a>
             </span>
 
             <!--Menu Mobile-->
@@ -91,6 +93,10 @@
             </span>
         </nav>
     </header>
+
+    <span class="menu-pesquisa-mobile">
+        <input type="search" name="pesquisa" id="pesquisa" placeholder="Buscar">
+    </span>
     <span class="menu-pc-mobile">
         <a href="#">Alianças</a>
         <a href="#">Brincos</a>
