--- a/paginas/faq.html
+++ b/paginas/faq.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosso FAQ</title>
-    <link rel="stylesheet" href="src/script/css/style.css">
-    <link rel="stylesheet" href="src/script/css/responsivo.css">
-    <link rel="shortcut icon" href="src/favicon/android-chrome-512x512.png" type="image/x-icon">
+    <link rel="stylesheet" href="../src/script/css/style.css">
+    <link rel="stylesheet" href="../src/script/css/responsivo.css">
+    <link rel="shortcut icon" href="../src/favicon/android-chrome-512x512.png" type="image/x-icon">
 </head>
 <body>
     <!-- MENU -->
     <header>
         <span>
-            <a href="index.html"><img src="src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
+            <a href="../index.html"><img src="../src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
         </span>
+
+        <input type="search" name="pesquisa" id="pesquisa" class="menu-pesquisa" placeholder="Buscar">
 
         <nav>
             <!--Menu Mobile-->
@@ -23,9 +25,9 @@
 
             <!--Menu PC-->
             <span id="menu-pc">
-                <a href="#" class="link-menupc">Alianças</a>
+                <a href="#" class="link-menupc">Anéis</a>
                 <a href="#" class="link-menupc">Brincos</a>
-                <a href="#" class="link-menupc" style="margin-right: 50px;">Colares</a>
+                <a href="#" class="link-menupc" style="margin-right: 10px;">Colares</a>
             </span>
 
             <!--Menu Mobile-->
@@ -91,6 +93,10 @@
             </span>
         </nav>
     </header>
+
+    <span class="menu-pesquisa-mobile">
+        <input type="search" name="pesquisa" id="pesquisa" placeholder="Buscar">
+    </span>
     <span class="menu-pc-mobile">
         <a href="#">Alianças</a>
         <a href="#">Brincos</a>
