--- a/paginas/login.html
+++ b/paginas/login.html
@@ -39,6 +39,7 @@
                     <div class="listamenu">
                         <a href="login.html" class="link-listamenu">Iniciar Sessão</a>
                         <a href="cadastro.html" class="link-listamenu">Criar Conta</a>
+                        <a href="minha-conta.html" class="link-listamenu">Minha Conta</a>
                     </div>
                 </button>
 
