--- a/paginas/faq.html
+++ b/paginas/faq.html
@@ -38,6 +38,7 @@
                     <div class="listamenu">
                         <a href="login.html" class="link-listamenu">Iniciar Sessão</a>
                         <a href="cadastro.html" class="link-listamenu">Criar Conta</a>
+                        <a href="minha-conta.html" class="link-listamenu">Minha Conta</a>
                     </div>
                 </button>
 
@@ -141,7 +142,7 @@
      </footer>
 
     <!--JAVASCRIPT-->
-    <script src="src/script/javascript/javascript.js" type="text/javascript"></script>
+    <script src="../src/script/javascript/javascript.js" type="text/javascript"></script>
         <!--Ícones-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
