--- a/paginas/minha-conta.html
+++ b/paginas/minha-conta.html
@@ -107,14 +107,21 @@
     <!-- MINHA CONTA -->
     <article id="minha-conta">
         <h1>Minha Conta</h1>
+        <!-- Minha Conta -->
         <div class="caixa-minha-conta">
             <h2>Dados Pessoais</h2>
-            <button><a href="#">Editar Dados</a></button>
+            <div class="conteudo-minhaconta">
+                <strong>Nome do Usuário</strong>
+                <p>Email</p>
+                <p>Telefone: (xx)xxxxx-xxxx</p>
+                <button class="btn-minhaconta"><a href="#">Editar Dados</a></button>
+            </div>
         </div>
-
+        <!-- Realizar Compra -->
         <div class="caixa-compra">
-            <h2>Realizar Compra</h2>
-            <button><a href="../index.html">Ir para Loja</a></button>
+            <ion-icon name="cart-outline"></ion-icon>
+            <p>Realize a sua primeira compra!</p>
+            <button class="btn-minhaconta"><a href="../index.html">Ir para Loja</a></button>
         </div>
     </article>
 
