--- a/paginas/minha-conta.html
+++ b/paginas/minha-conta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosso FAQ</title>
+    <title>Minha Conta</title>
     <link rel="stylesheet" href="../src/script/css/style.css">
     <link rel="stylesheet" href="../src/script/css/responsivo.css">
     <link rel="shortcut icon" href="../src/favicon/android-chrome-512x512.png" type="image/x-icon">
