🔨Menu ✨Botões Minha Conta

--- a/paginas/login.html
+++ b/paginas/login.html
@@ -69,8 +69,9 @@
                 <button class="btnmenu-pc">
                     <ion-icon name="person-outline" class="iconbtn"></ion-icon><br>Conta
                     <div class="listamenu btnconta">
-                        <a href="#" class="link-listamenu">Iniciar Sessão</a>
-                        <a href="#" class="link-listamenu">Criar Conta</a>
+                        <a href="login.html" class="link-listamenu">Iniciar Sessão</a>
+                        <a href="cadastro.html" class="link-listamenu">Criar Conta</a>
+                        <a href="minha-conta.html" class="link-listamenu">Minha Conta</a>
                     </div>
                 </button>
 
