--- a/paginas/minha-conta.html
+++ b/paginas/minha-conta.html
@@ -68,8 +68,9 @@
                 <button class="btnmenu-pc">
                     <ion-icon name="person-outline" class="iconbtn"></ion-icon><br>Conta
                     <div class="listamenu btnconta">
-                        <a href="#" class="link-listamenu">Iniciar Sessão</a>
-                        <a href="#" class="link-listamenu">Criar Conta</a>
+                        <a href="login.html" class="link-listamenu">Iniciar Sessão</a>
+                        <a href="cadastro.html" class="link-listamenu">Criar Conta</a>
+                        <a href="minha-conta.html" class="link-listamenu">Minha Conta</a>
                     </div>
                 </button>
 
@@ -114,14 +115,14 @@
                 <strong>Nome do Usuário</strong>
                 <p>Email</p>
                 <p>Telefone: (xx)xxxxx-xxxx</p>
-                <button class="btn-minhaconta"><a href="#">Editar Dados</a></button>
+                <button class="btn-minhaconta" btn-placeholder="Editar Dados"><a href="#"></a></button>
             </div>
         </div>
         <!-- Realizar Compra -->
         <div class="caixa-compra">
             <ion-icon name="cart-outline"></ion-icon>
             <p>Realize a sua primeira compra!</p>
-            <button class="btn-minhaconta"><a href="../index.html">Ir para Loja</a></button>
+            <a href="../index.html"><button class="btn-compra" btn-placeholder="Ir para Loja"></button></a>
         </div>
     </article>
 
