--- a/paginas/teste.html
+++ b/paginas/teste.html
@@ -70,6 +70,7 @@
                     <div class="listamenu btnconta">
                         <a href="#" class="link-listamenu">Iniciar Sessão</a>
                         <a href="#" class="link-listamenu">Criar Conta</a>
+                        <a href="minha-conta.html" class="link-listamenu">Minha Conta</a>
                     </div>
                 </button>
 
