✨Header 🔨Placeholders MySQL

--- a/paginas/minha-conta.html
+++ b/paginas/minha-conta.html
@@ -112,7 +112,7 @@
         <div class="caixa-minha-conta">
             <h2>Dados Pessoais</h2>
             <div class="conteudo-minhaconta">
-                <strong>Nome do Usuário</strong>
+                <strong style="font-size: 1.3em;">Nome do Usuário</strong>
                 <p>Email</p>
                 <p>Telefone: (xx)xxxxx-xxxx</p>
                 <button class="btn-minhaconta" btn-placeholder="Editar Dados"><a href="#"></a></button>
