--- a/paginas/teste.html
+++ b/paginas/teste.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="../src/script/css/style.css">
     <link rel="stylesheet" href="../src/script/css/responsivo.css">
     <link rel="shortcut icon" href="../src/favicon/android-chrome-512x512.png" type="image/x-icon">
@@ -68,8 +68,8 @@
                 <button class="btnmenu-pc">
                     <ion-icon name="person-outline" class="iconbtn"></ion-icon><br>Conta
                     <div class="listamenu btnconta">
-                        <a href="#" class="link-listamenu">Iniciar Sessão</a>
-                        <a href="#" class="link-listamenu">Criar Conta</a>
+                        <a href="login.html" class="link-listamenu">Iniciar Sessão</a>
+                        <a href="cadastro.html" class="link-listamenu">Criar Conta</a>
                         <a href="minha-conta.html" class="link-listamenu">Minha Conta</a>
                     </div>
                 </button>
@@ -109,7 +109,7 @@
     <!--Nome, email, cpf, telefone e senha-->
     <div id="caixa" class="cadastro">
         <div class="form-box">
-            <h1>&#x1F48E Teste!</h1>
+            <h1>&#x1F48E Crie sua conta!</h1>
             <form action="#" id="form-cad">
                 <!--Nome-->
                 <div class="input-box">
@@ -176,6 +176,7 @@
 
     <!--JAVASCRIPT-->
     <script src="../src/script/javascript/javascript.js" type="text/javascript"></script>
+    <script src="../src/script/javascript/validacao.js" type="text/javascript"></script>
         <!--Ícones-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
