--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <h1>&#x2692 Em manutenção</h1>
     <p>Mas você pode visualizar nossas outras páginas :)</p>
+    <a href="./paginas/index.html">Página Inicial (Em Manutenção)</a> <br>
     <a href="./paginas/cadastro.html">Cadastro</a> <br>
     <a href="./paginas/login.html">Login</a> <br>
+    <a href="./paginas/minha-conta.html">Minha Conta</a> <br>
 
     <a href="./paginas/teste.html">&#x1F575 Segredo</a>
 </body>
